advance on google clone

--- a/PRACTICE/index.html
+++ b/PRACTICE/index.html
@@ -27,6 +27,14 @@
                 <button class="signInBtt" type="button">Sign in</button>
             </li>
         </ul>
-    </header>    
+    </header>
+    
+    <main>
+        <div class="logoFigure">
+            <figure>
+                <img src="img/google_logo.png" alt="Google logo" width="272" height="92">
+            </figure>
+        </div>
+    </main>
 </body>
 </html>
